Warning "failed to send SIGKILL to process" appears in terminal
Categories
(Core :: IPC, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox134 | --- | unaffected |
firefox135 | --- | unaffected |
firefox136 | --- | fixed |
firefox137 | --- | fixed |
People
(Reporter: viktor_jaegerskuepper, Assigned: jld)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
48 bytes,
text/x-phabricator-request
|
Details | Review | |
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
Steps to reproduce on Linux:
- launch Firefox from terminal
- visit www.youtube.com or www.reddit.com (I could reproduce this easier with Youtube, other sites might also work.)
- open new tab
- close tab with Youtube/Reddit
- notice a warning like this in the terminal appearing after a few seconds:
[Parent 121553, IPC I/O Parent] WARNING: failed to send SIGKILL to process 133325: file /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/process_watcher_posix_sigchld.cc:159
- if the warning doesn't appear, try again
I couldn't figure out why the warning doesn't always appear. Interestingly I also got the warning by just visiting Youtube and waiting for some time.
During my regular browsing sessions this warning appears several times. I don't know if this means there is a bug or if this warning should be silenced.
I ran mozregression with --process-output=stdout
and got:
Last good revision: 16b2437248d92c7a4d79b5f7ddee09935685e6a6
First bad revision: e3c3c980538708e0cde56b28ffa4e37861640a6d
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=16b2437248d92c7a4d79b5f7ddee09935685e6a6&tochange=e3c3c980538708e0cde56b28ffa4e37861640a6d
This points to bug 1658072.
OS: Arch Linux
KDE Plasma 6.2.5 on Wayland
Comment 1•7 months ago
|
||
Setting Regressed by
field after analyzing regression range found by mozregression in comment #0.
Comment 2•7 months ago
|
||
:jld, since you are the author of the regressor, bug 1658072, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Updated•7 months ago
|
Comment 3•7 months ago
|
||
The bug has a release status flag that shows some version of Firefox is affected, thus it will be considered confirmed.
Updated•6 months ago
|
Comment 4•6 months ago
|
||
I'm going to assume the warning is harmless, but jld can elaborate.
Updated•6 months ago
|
Updated•6 months ago
|
Assignee | ||
Comment 5•6 months ago
|
||
As far as I can tell, bug 1658072 didn't change the behavior except for the logging. I have a patch.
Assignee | ||
Comment 6•6 months ago
|
||
The case in question is where the process exits before the timeout
expires and it's a forkserver child. Previously (before bug 1658072)
there wouldn't be a log message in this case, but otherwise the effect
was the same: if a process with the given pid was still running, it
would be sent SIGKILL
.
Comment 8•6 months ago
|
||
bugherder |
Comment 9•6 months ago
|
||
The patch landed in nightly and beta is affected.
:jld, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox136
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Comment 10•6 months ago
|
||
The case in question is where the process exits before the timeout
expires and it's a forkserver child. Previously (before bug 1658072)
there wouldn't be a log message in this case, but otherwise the effect
was the same: if a process with the given pid was still running, it
would be sent SIGKILL
.
Original Revision: https://phabricator.services.mozilla.com/D237857
Updated•6 months ago
|
Comment 11•6 months ago
|
||
beta Uplift Approval Request
- User impact if declined: scary-looking log messages that may result in filing unnecessary bugs
- Code covered by automated testing: yes
- Fix verified in Nightly: yes
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: n/a
- Risk associated with taking this patch: very low
- Explanation of risk level: affects only a log message, and only a feature that's usually preffed off
- String changes made/needed: none
- Is Android affected?: no
Updated•6 months ago
|
Comment 12•6 months ago
|
||
uplift |
Updated•6 months ago
|
Assignee | ||
Updated•6 months ago
|
Description
•